--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "union": "0.3.5",
     "flatiron": "0.3.8",
-    "moment": "2.1.0"
+    "moment": "2.1.0",
+    "plates": "0.4.8"
   },
   "devDependencies": {
     "api-easy": "0.3.2",
