--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "union": "0.3.5",
-    "flatiron": "0.3.8",
     "moment": "2.1.0",
-    "plates": "0.4.8"
+    "plates": "0.4.8",
+    "express": "3.x"
   },
   "devDependencies": {
     "api-easy": "0.3.2",
